✨ feat: finished schema creator.